# yewscion-scripts

./: .gitignore  AUTHORS  Changelog.md  Changelog.org  DEPENDENCIES.txt  LICENSE  Makefile.am  NEWS  README.md  README.org  bootstrap  cast.sh  changelog.md  configure.ac  guile.am  guix.scm  incant.sh  pre-inst-env.in  yewscion-scripts.org
build-aux/: test-driver.scm
doc/: yewscion-scripts.texi
export/man/: yewscion-scripts.man
export/texi/: yewscion-scripts.info
share/guile/: display-encoded-wifi.scm  generate-localweb.scm  initialize-project.scm  pull-projects.scm  push-all-git-repos.scm  run-backups.scm
tests/: maintests.scm
yewscion/: battery.scm.in  display-encoded-wifi.scm  display-encoded-wifi.scm.in  generate-localweb.scm.in  initialize-project.scm.in  pull-projects.scm  pull-projects.scm.in  run-backups.scm.in  update-all-remote-systems.scm  update-all-remote-systems.scm.in
